feat(user-manage): 高保真恢复用户管理
